force-app/main/default/objects/sugati__Default_Itinerary_Content_Category__c/sugati__Default_Itinerary_Content_Category__c.object-meta.xml
<CustomObject>
    <label>Default Content Category</label>
    <nameField>
        <label>Default Content Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Default Content Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>