force-app/main/default/objects/sugati__Default_Itinerary_Content_Category__c/fields/sugati__DICC_Active__c.field-meta.xml
<CustomField>
    <fullName>sugati__DICC_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>