force-app/main/default/objects/sugati__Default_Itinerary_Content_Category__c/fields/sugati__DICC_Itinerary_Content_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__DICC_Itinerary_Content_Category__c</fullName>
    <label>Itinerary Content Category</label>
    <referenceTo>sugati__Itinerary_Content_Category__c</referenceTo>
    <relationshipLabel>Default Content Categories</relationshipLabel>
    <relationshipName>Default_Content_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>