force-app/main/default/objects/sugati__Default_Itinerary_Content_Category__c/fields/sugati__DICC_New_Page__c.field-meta.xml
<CustomField>
    <fullName>sugati__DICC_New_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Page</label>
    <type>Checkbox</type>
</CustomField>